Function library to calculate performance of solar collectors

--- a/Functions/test.ipynb
+++ b/Functions/test.ipynb
@@ -91,15 +91,15 @@
     "T_a = (np.array([61,61,61,61,61,61,63,65,67,70,73,75,76,77,78,79,75,70,69,68,67,65,65,62])-32)*5/9 + 273.15;\n",
     "T_dp = (np.array([61,61,61,61,61,61,62,62,63,64,65,65,66,66,66,66,64,65,64,63,62,62,62,62])-32)*5/9 + 273.15;\n",
     "T_fi = (120-32)*5/9+273.15; #120 deg F\n",
-    "L_p = 0.015;\n",
+    "L_p = 0.015; #m\n",
     "e = np.array([0.95,0.88,0.88]);\n",
-    "W = 0.15;\n",
-    "D = 0.01;\n",
-    "D_i = 0.008;\n",
-    "delt = 0.0005;\n",
-    "k_p = 385;\n",
-    "m_dot = 1.0;\n",
-    "A_c = 2;"
+    "W = 0.15; #m\n",
+    "D = 0.01; #m\n",
+    "D_i = 0.008; #m\n",
+    "delt = 0.0005; #m\n",
+    "k_p = 385; #W/mK\n",
+    "m_dot = 1.0; #kg/min\n",
+    "A_c = 2; #m^2"
    ]
   },
   {
@@ -155,15 +155,6 @@
       "|               Collector Area (A)              |    2 m²    |\n",
       "+-----------------------------------------------+------------+\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-6-756f9ac9826f>:13: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
-      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
-      "  ch.add_row([\"Fluid Inlet Temperature (T)\",str(np.int((T_fi-273.15)*9/5+32))+\"\\u00b0F\"]);\n"
-     ]
     }
    ],
    "source": [
@@ -179,7 +170,7 @@
     "ch.add_row([\"# of Covers (N)\", str(N)]);\n",
     "ch.add_row([\"Thickness of Cover (L)\", str(L*1000) + \" mm\"]);\n",
     "ch.add_row([\"Absorptance of Plate at Normal Incidence (\\u03b1\\u2099)\", str(alpha_n)]);\n",
-    "ch.add_row([\"Fluid Inlet Temperature (T)\",str(np.int((T_fi-273.15)*9/5+32))+\"\\u00b0F\"]);\n",
+    "ch.add_row([\"Fluid Inlet Temperature (T)\",str(np.int32((T_fi-273.15)*9/5+32))+\"\\u00b0F\"]);\n",
     "ch.add_row([\"Distance Between Plates (L\\u209a)\",str(L_p*1000)+\" mm\"]);\n",
     "ch.add_row([\"Emissivity of Plate (\\u03b5\\u209a)\",str(e[0])]);\n",
     "ch.add_row([\"Distance Between Tubes (W)\",str(W*1000)+\" mm\"]);\n",
